--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MyBase" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MyBase" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorOnPrimary">@color/color_light_blue</item>
+        <item name="colorPrimary">@color/color_light_blue</item>
+        <item name="colorAccent">@color/color_light_blue</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.MyBase" parent="Base.Theme.MyBase" />
