[A] add message fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
 
     <color name="color_background">#FFFFFFFF</color>
     <color name="color_light_blue">#20BAC5</color>
+    <color name="color_light_gray">#BBBBBB</color>
 </resources>
