--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,4 +12,13 @@
         <attr name="isSwitchMode" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="AppActionBar">
+        <attr name="actionTitle" format="string" />
+        <attr name="actionContent" format="string" />
+        <attr name="hideActionUp" format="boolean" />
+        <attr name="actionUpIcon" format="reference" />
+        <attr name="actionSuffixIcon" format="reference" />
+        <attr name="actionPrefixIcon" format="reference" />
+    </declare-styleable>
+
 </resources>
