--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,9 @@
         <item name="colorOnPrimary">@color/color_light_blue</item>
         <item name="colorPrimary">@color/color_light_blue</item>
         <item name="colorAccent">@color/color_light_blue</item>
+        <item name="editTextStyle">@style/MyAppTheme.Edittext</item>
         <item name="android:textColor">@color/black</item>
+        <item name="buttonStyle">@style/MyAppTheme.BaseButton</item>
     </style>
 
     <style name="Theme.MyBase" parent="Base.Theme.MyBase" />
