--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.yilin.mybase.view.AppItem
         android:id="@+id/item_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         app:title="@string/profile_title_message" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.yilin.mybase.view.AppItem
+        android:id="@+id/item_calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/calendar_title_note" />
+
+</LinearLayout>
