--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -17,6 +17,9 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_mainFragment_to_calendarActivity"
+            app:destination="@id/calendarActivity" />
     </fragment>
 
     <fragment
@@ -24,5 +27,10 @@
         android:name="com.yilin.mybase.ui.fragment.MessageFragment"
         android:label="MessageFragment"
         tools:layout="@layout/fragment_message" />
+    <activity
+        android:id="@+id/calendarActivity"
+        android:name="com.yilin.mybase.ui.activity.CalendarActivity"
+        android:label="CalendarActivity"
+        tools:layout="@layout/activity_calendar" />
 
 </navigation>
