--- a/app/src/main/res/drawable/background_edittext.xml
+++ b/app/src/main/res/drawable/background_edittext.xml
@@ -2,9 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:radius="8dp" />
+    <corners android:radius="8dp" />
 
-    <solid
-        android:color="#FEF9F9"/>
+    <solid android:color="#FEF9F9" />
 </shape>
