[A] add pokemon detail fragment

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -20,6 +20,13 @@
         <action
             android:id="@+id/action_mainFragment_to_calendarActivity"
             app:destination="@id/calendarActivity" />
+        <action
+            android:id="@+id/action_mainFragment_to_pokemonDetailFragment"
+            app:destination="@id/pokemonDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
@@ -32,5 +39,15 @@
         android:name="com.yilin.mybase.ui.activity.CalendarActivity"
         android:label="CalendarActivity"
         tools:layout="@layout/activity_calendar" />
+    <fragment
+        android:id="@+id/pokemonDetailFragment"
+        android:name="com.yilin.mybase.ui.fragment.PokemonDetailFragment"
+        android:label="PokemonDetailFragment"
+        tools:layout="@layout/fragment_pokemon_detail">
+        <argument
+            android:name="id"
+            app:argType="string"
+            app:nullable="false" />
+    </fragment>
 
 </navigation>
