--- a/app/src/main/res/drawable/selector_button.xml
+++ b/app/src/main/res/drawable/selector_button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_enable" android:state_enabled="true" />
-    <item android:drawable="@drawable/button_disable" android:state_enabled="false" />
+    <item android:drawable="@drawable/background_button_enable" android:state_enabled="true" />
+    <item android:drawable="@drawable/background_button_disable" android:state_enabled="false" />
     <!-- default state-->
-    <item android:drawable="@drawable/button_enable" />
+    <item android:drawable="@drawable/background_button_enable" />
 
 </selector>
