--- a/app/src/main/res/layout/fragment_calendar_note_add.xml
+++ b/app/src/main/res/layout/fragment_calendar_note_add.xml
@@ -102,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:background="@drawable/button_cancel"
+            android:background="@drawable/background_button_cancel"
             android:text="@string/cancel" />
     </LinearLayout>
 
