--- a/app/src/main/res/layout/item_app_action_bar.xml
+++ b/app/src/main/res/layout/item_app_action_bar.xml
@@ -62,13 +62,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_light_gray"
-            android:textSize="16sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/iv_suffix_icon"
             android:layout_width="16dp"
-            android:layout_height="16dp" />
+            android:layout_height="16dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
