--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -9,8 +9,8 @@
         android:id="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:actionTitle="@string/profile_title_message"
         app:actionContent="@string/message_more"
+        app:actionTitle="@string/profile_title_message"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -22,5 +22,15 @@
         app:layout_constraintTop_toBottomOf="@id/action_bar"
         tools:itemCount="3"
         tools:listitem="@layout/item_message" />
+
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/message_empty"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/action_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
